--- a/HospitalManager.Client/HospitalManager.Client.csproj
+++ b/HospitalManager.Client/HospitalManager.Client.csproj
@@ -6,4 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="IdentityModel.AspNetCore" Version="4.3.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.10" />
+    </ItemGroup>
+
 </Project>
