Docker networking integrated

--- a/HospitalManager.Client/appsettings.json
+++ b/HospitalManager.Client/appsettings.json
@@ -6,5 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "HospitalManagerAPIUrl": "http://localhost:8081"
+  "HospitalManagerAPIUrl": "http://aspnet-api:8081"
 }
