--- a/HospitalManager.IDP/HospitalManager.IDP.csproj
+++ b/HospitalManager.IDP/HospitalManager.IDP.csproj
@@ -16,4 +16,8 @@
 
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <AdditionalFiles Include="Pages\Account\Registration\Index.cshtml" />
+	</ItemGroup>
 </Project>
