--- a/HospitalManager.Client/HospitalManager.Client.csproj
+++ b/HospitalManager.Client/HospitalManager.Client.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazor.Bootstrap" Version="3.2.0" />
       <PackageReference Include="IdentityModel.AspNetCore" Version="4.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.10" />
     </ItemGroup>
