--- a/HospitalManager.Client/Properties/launchSettings.json
+++ b/HospitalManager.Client/Properties/launchSettings.json
@@ -13,6 +13,7 @@
         "commandName": "Project",
         "dotnetRunMessages": true,
         "launchBrowser": true,
+        "hotReloadEnabled": true,
         "applicationUrl": "http://localhost:5123",
         "environmentVariables": {
           "ASPNETCORE_ENVIRONMENT": "Development"
