--- a/HospitalManager.API/HospitalManager.API.csproj
+++ b/HospitalManager.API/HospitalManager.API.csproj
@@ -15,6 +15,7 @@
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
         <PackageReference Include="Oracle.EntityFrameworkCore" Version="8.23.60" />
+        <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
