--- a/HospitalManager.API/HospitalManager.API.csproj
+++ b/HospitalManager.API/HospitalManager.API.csproj
@@ -21,7 +21,7 @@
 
     <ItemGroup>
       <Folder Include="DbContexts\" />
-      <Folder Include="Dtos\" />
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
