--- a/HospitalManager.Client/HospitalManager.Client.csproj
+++ b/HospitalManager.Client/HospitalManager.Client.csproj
@@ -10,6 +10,8 @@
       <PackageReference Include="bootstrap" Version="5.3.3" />
       <PackageReference Include="IdentityModel.AspNetCore" Version="4.3.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="8.0.10" />
+      <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="8.0.10" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.10" />
     </ItemGroup>
 
     <ItemGroup>
