--- a/HospitalManager.API/HospitalManager.API.csproj
+++ b/HospitalManager.API/HospitalManager.API.csproj
@@ -9,6 +9,8 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+        <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="8.0.10" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.10" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
           <PrivateAssets>all</PrivateAssets>
@@ -22,7 +24,6 @@
     <ItemGroup>
       <Folder Include="DbContexts\" />
       <Folder Include="Migrations\" />
-      <Folder Include="Profiles\" />
     </ItemGroup>
 
     <ItemGroup>
